[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/menu/main/main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -90.0
margin_right = 127.5
margin_bottom = -59.0
text = "IFT611 - Projet de session
Par Arnaud Guilhamat &  Valentin Prétat"

[node name="Create" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = 47.0
margin_right = -106.0
margin_bottom = 67.0
text = "Créer une partie"

[node name="Join" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 86.0
margin_top = 49.0
margin_right = 228.0
margin_bottom = 69.0
text = "Rejoindre une partie"

[node name="IpAddress" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = 46.0
margin_right = 78.0
margin_bottom = 70.0
text = "172.0.0.1"
placeholder_text = "Adresse IP"

[node name="ErrorLabel" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = 77.0
margin_right = 1.0
margin_bottom = 91.0

[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
